<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="first_number">First mobile number</string>
    <string name="second_number">Second mobile number</string>
    <string name="third_number">Third mobile number</string>
    <string name="text_message">Message to be sent</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="mobile_message">Enter the mobile numbers</string>
    <string name="message_text">Enter message</string>

</resources>
