<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/black">

    <!-- Header aligned to top -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/silver"
        android:layout_margin="@dimen/header_margin"
        android:gravity="center" >

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/action_settings"
            android:gravity="left"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_margin="@dimen/header_margin"
            android:textSize="@dimen/header_text_size"/>

    </RelativeLayout>

    <ScrollView
    android:id="@+id/scrollableContents"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/header_margin"
    android:layout_above="@id/footer"
    android:layout_below="@id/header" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/header_margin"
            android:orientation="vertical" >
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/mobile_message"
                android:layout_margin="@dimen/header_margin"
                android:textStyle="bold"
                android:textColor="@color/white"/>
            <EditText
                android:hint="@string/first_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/header_margin"
                android:textColor="@color/white"
                android:maxLength="@integer/max_mobile_length"/>
            <EditText
                android:hint="@string/second_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/header_margin"
                android:textColor="@color/white"
                android:maxLength="@integer/max_mobile_length"/>
            <EditText
                android:hint="@string/third_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/header_margin"
                android:textColor="@color/white"
                android:maxLength="@integer/max_mobile_length"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/message_text"
                android:textStyle="bold"
                android:layout_margin="@dimen/header_margin"
                android:textColor="@color/white"/>
            <EditText
                android:hint="@string/text_message"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/header_margin"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@id/footer"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/header_margin"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/header_margin"
            android:background="@color/black">
                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_save"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:textColor="@color/black"/>
                <Button android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                    android:layout_weight="1"
                    android:background="@color/grey"
                    android:textColor="@color/black"
                    android:onClick="sendMessage"/>
            </LinearLayout>
        </RelativeLayout>
</RelativeLayout>
